fix(html, css): fix broken layout, sizing, and hrefs

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,6 @@
 }
 
 #nav-container {
-    width: 100vw;
-    height: 80px;
     position: relative;
     background-color: #3399ff;
     display: flex;
@@ -32,13 +30,13 @@ nav {
 }
 
 #hamburger-button {
-    background-image: url("assets/social-media-logos/hamburger-icon.png");
     background: transparent;
 }
 
 #hamburger-icon {
     width: 40px;
     height: 40px;
+    color: white;
 }
 
 .dropdown {
@@ -81,9 +79,13 @@ nav {
     font-family: sans-serif;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 #header-container {
-    width: 100vw;
-    height: 50vh;
+    height: 40vh;
     background-color: #3399ff;
     color: white;
     font-family: sans-serif;
@@ -110,14 +112,6 @@ nav {
     margin-top: 5vh;
 }
 
-h1 {
-    font-size: 85px;
-}
-
-p {
-    font-size: 50px;
-}
-
 #body-container {
     background-color: white;
 }
@@ -135,6 +129,9 @@ p {
 }
 
 .project-container {
+    height: 100%;
+    width: 100%;
+    position: relative;
     display: flex;
     flex-direction: row;
     background-color: #3399ff;
@@ -144,20 +141,17 @@ p {
 
 #rocket-container {
     margin-left: 12vw;
-    /* flex: 100%;
-    display: flex; 
-    justify-content: center;
-    align-items: center; */
 }
 
 #roadmap-project-header-container, #practice-project-header-container {
     font-family: sans-serif;
 }
 
-#practice-project-container {
-    height: 100%;
-    width: 100%;
-    position: relative;
+.project-header-container {
+    width: 30%;
+    align-self: end;
+    margin-left: 1em;
+    color: white;
 }
 
 @font-face {
@@ -170,7 +164,6 @@ p {
     font-family: 'digital-rain';
     font-weight: bold;
     color: white;
-    font-size: 20px;
     overflow: hidden;
     width: 100%;
     height: 100%;
@@ -192,7 +185,6 @@ p {
     text-shadow: 0 0 5px white, 0 0 10px white;
 }
 
-
 @keyframes matrixRain {
     to {
         transform: translateY(calc(100% + 600px)); 
@@ -203,16 +195,4 @@ p {
     display: block;
     transform: rotate(90deg);
     margin-bottom: 5px;
-}
-
-.project-header-container {
-    width: 30%;
-    height: 15%;
-    align-self: end;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    text-shadow: none;
-    font-size: 30px;
 }
